# chatbot-rag

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  package-lock.json  package.json
.githooks/: pre-commit
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  config.py  database.py  main.py  models.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_enable_pgvector_create_documents.py  002_create_chat_sessions_and_messages.py
backend/controllers/: __init__.py  chat.py  documents.py
backend/routers/: __init__.py  chat.py  documents.py
backend/schemas/: __init__.py  chat.py  document.py
backend/services/: __init__.py  chat_service.py  document_service.py  embedding_service.py  llm_service.py
frontend/: .dockerignore  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts
frontend/e2e/: chat-sidebar.spec.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: DocumentUpload.tsx
frontend/src/components/ui/: badge.tsx
frontend/src/features/: DocumentUpload.tsx  mode-toggle.tsx  theme-provider.tsx
frontend/src/features/DocumentUpload/: config.ts  hooks.ts  index.tsx  services.ts  types.ts  utils.ts
frontend/src/features/DocumentUpload/components/: DocumentList.tsx  DropZone.tsx  FilePreview.tsx  UploadAlert.tsx  UploadButton.tsx
frontend/src/features/DocumentUpload/services/: api.ts  documentService.ts  index.ts
frontend/src/features/chat/: Chat.tsx  constants.ts
frontend/src/features/chat/components/: ChatHeader.tsx  (+4 more)
frontend/src/lib/: logger.ts  time.ts
frontend/src/pages/: DocumentUploadPage.tsx  HomePage.tsx  Layout.tsx  index.ts
frontend/src/services/: api.ts  index.ts
logs/opencode/: README.md  session-2026-01-21(2).md  session-2026-01-21.md  session-2026-02-11.md  session-2026-02-13.md  session-2026-02-14.md
scripts/: install-hooks.mjs  pre-commit-test-gate.mjs
(+3 files in other folders)
