[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "chatbot-rag-backend"
version = "0.1.0"
description = "Backend API para chatbot RAG"
requires-python = ">=3.9"

[tool.ruff]
target-version = "py39"
line-length = 100
indent-width = 4

# Inclui todos os arquivos Python, exclui venv e cache
include = ["*.py"]
exclude = [
    ".venv",
    "venv",
    ".git",
    "__pycache__",
    "*.egg-info",
    ".pytest_cache",
    ".mypy_cache",
    "alembic",
]

[tool.ruff.lint]
# Regras selecionadas: pycodestyle, Pyflakes, isort, pep8-naming, pydocstyle, bugbear, etc.
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "D",   # pydocstyle
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]

# Regras ignoradas
ignore = [
    "D100",  # Missing docstring in public module
    "D104",  # Missing docstring in public package
    "D107",  # Missing docstring in __init__
    "E501",  # Line too long (handled by formatter)
    "B008",  # function-call-in-default-argument (FastAPI pattern)
]

# Ativar correções automáticas
fixable = ["ALL"]
unfixable = []

# Docstrings em português
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["config", "database", "models", "schemas", "services", "controllers", "routers"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.per-file-ignores]
# Ignora regras específicas para certos arquivos
"__init__.py" = ["F401"]  # Permite imports não usados em __init__.py
"tests/**/*.py" = ["D"]    # Ignora docstrings em testes
"alembic/**/*.py" = ["D", "E", "W"]  # Ignora regras em migrações
